[package]
name = "async-pcap"
version = "0.1.6"
edition = "2024"
authors = ["Lorenzo Leonardo <enzotechcomputersolutions@gmail.com>"]
description = "An asynchronous implementation of pcap."
license = "MIT"
repository = "https://github.com/LorenzoLeonardo/async-pcap"
homepage = "https://github.com/LorenzoLeonardo/async-pcap"
documentation = "https://docs.rs/async-pcap"
readme = "README.md"

[dependencies]
log = "0.4"
pcap = "2.4"
tokio = { version = "1.47", features = ["full"] }
